Implement Twitter Bootstrap.

--- a/views/layout.html
+++ b/views/layout.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>Leadership Macon Online Nominations</title>
+
+    <!-- Application Styles -->
+    <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="screen" title="LM Nomination Stylesheet" charset="utf-8" />
   </head>
   <body>
     <header>
