--- a/views/layout.html
+++ b/views/layout.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="screen" title="LM Nomination Stylesheet" charset="utf-8" />
   </head>
   <body>
-    <header>
-      <h1>Leadership Macon Online Nominations</h1>
-    </header>
-    <div class="content-container">
-      {{html body}}
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <h1>Leadership Macon Online Nominations</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span2">
+          <nav>
+            <a href="#">Start New Nomination</a>
+            <a href="#">Return to Leadership Macon</a>
+          </nav>
+        </div>
+        <div class="span10">
+          {{html body}}
+        </div>
+      </div>
     </div>
   </body>
 </html>
