--- a/views/layout.html
+++ b/views/layout.html
@@ -14,13 +14,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="span2">
+        <div class="span3">
+          <h3>Main Menu</h3>
           <nav>
             <a href="#">Start New Nomination</a>
             <a href="#">Return to Leadership Macon</a>
           </nav>
         </div>
-        <div class="span10">
+        <div class="span9">
           {{html body}}
         </div>
       </div>
