--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,7 +1,10 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
 @import compass/reset
 @import "compass_twitter_bootstrap"
+
+// Navigation
+nav a
+  display: block
+
+  &:before
+    content: "» "
+    font-size: 1.4em
