Add the leadership skills observed field.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -154,7 +154,14 @@
         </select>
       </div>
     </div>
-    
+
+    <div class="control-group">
+      <label class="control-label" for="leadership_skills_observed">If you answered yes above, what leadership skills have you observed?</label>
+      <div class="controls">
+        <input type="text" class="input-xlarge" id="leadership_skills_observed" name="leadership_skills_observed">
+      </div>
+    </div>
+
     <div class="control-group">
       <label class="control-label" for="nominee_notified">I have notified the nominee about their nomination.</label>
       <div class="controls">
