Tweak the sizes of the text boxes.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -22,21 +22,21 @@
     <div class="control-group">
       <label class="control-label" for="nominee_first_name">First Name</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_first_name" name="nominee[first_name]">
+        <input type="text" class="input-xxlarge" id="nominee_first_name" name="nominee[first_name]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominee_middle_name">Middle Name</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_middle_name" name="nominee[middle_name]">
+        <input type="text" class="input-xxlarge" id="nominee_middle_name" name="nominee[middle_name]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominee_first_name">Last Name</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_last_name" name="nominee[last_name]">
+        <input type="text" class="input-xxlarge" id="nominee_last_name" name="nominee[last_name]">
       </div>
     </div>
 
@@ -50,21 +50,21 @@
     <div class="control-group">
       <label class="control-label" for="nominee_organization">Organization</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_organization" name="nominee[organization]">
+        <input type="text" class="input-xxlarge" id="nominee_organization" name="nominee[organization]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominee_email">Email</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_email" name="nominee[email]">
+        <input type="text" class="input-xxlarge" id="nominee_email" name="nominee[email]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominee_street_address">Street Address</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_street_address" name="nominee[street_address]">
+        <input type="text" class="input-xxlarge" id="nominee_street_address" name="nominee[street_address]">
       </div>
     </div>
 
@@ -78,14 +78,14 @@
     <div class="control-group">
       <label class="control-label" for="nominee_state">State</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_state" name="nominee[state]" value="GA" disabled="true">
+        <input type="text" class="input-small" id="nominee_state" name="nominee[state]" value="GA" disabled="true">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominee_zip">ZIP</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominee_zip" name="nominee[zip]">
+        <input type="text" class="input-small" id="nominee_zip" name="nominee[zip]">
       </div>
     </div>
   </fieldset>
@@ -95,7 +95,7 @@
     <div class="control-group">
       <label class="control-label" for="nominator_name">Your Name</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominator_name" name="nominator[name]">
+        <input type="text" class="input-xxlarge" id="nominator_name" name="nominator[name]">
         <p class="help-block">Enter your first and last name.</p>
       </div>
     </div>
@@ -103,21 +103,21 @@
     <div class="control-group">
       <label class="control-label" for="nominator_organization">Your Organization</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominator_organization" name="nominator[organization]">
+        <input type="text" class="input-xxlarge" id="nominator_organization" name="nominator[organization]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominator_name">Your Email</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominator_email" name="nominator[email]">
+        <input type="text" class="input-xxlarge" id="nominator_email" name="nominator[email]">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="nominator_name">Your Phone</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nominator_phone" name="nominator[phone]">
+        <input type="text" class="input-xxlarge" id="nominator_phone" name="nominator[phone]">
       </div>
     </div>
   </fieldset>
@@ -127,21 +127,21 @@
     <div class="control-group">
       <label class="control-label" for="nominator_reason">I am nominating this person because.</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="nomination_reason" name="nomination_reason">
+        <input type="text" class="input-xxlarge" id="nomination_reason" name="nomination_reason">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="good_leader_reason">I feel this person will be a good leader because.</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="good_leader_reason" name="good_leader_reason">
+        <input type="text" class="input-xxlarge" id="good_leader_reason" name="good_leader_reason">
       </div>
     </div>
 
     <div class="control-group">
       <label class="control-label" for="num_years_known">How many years have you known each other?</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="num_years_known" name="num_years_known">
+        <input type="text" class="input-xxlarge" id="num_years_known" name="num_years_known">
       </div>
     </div>
 
@@ -158,7 +158,7 @@
     <div class="control-group">
       <label class="control-label" for="leadership_skills_observed">If you answered yes above, what leadership skills have you observed?</label>
       <div class="controls">
-        <input type="text" class="input-xlarge" id="leadership_skills_observed" name="leadership_skills_observed">
+        <input type="text" class="input-xxlarge" id="leadership_skills_observed" name="leadership_skills_observed">
       </div>
     </div>
 
