Implementation of model; wire up of submit behavior.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -5,7 +5,7 @@
   throughly and double check your responses for accuracy.
 </p>
 
-<form>
+<form action="/submit" method="post">
   <fieldset>
     <legend>Nominee Contact Information</legend>
     <div class="control-group">
