--- a/views/nomthanksemail.html
+++ b/views/nomthanksemail.html
@@ -8,6 +8,8 @@
       me if you have any questions.
     </p>
 
+    <p>Thank you,</p>
+
     <p>
       Lynn Farmer<br/>
       Director of Leadership Macon<br/>
