No welcome page / framing.
We've decided we want this to be as dead simple as possible, so when you
drop on nominate.leadershipmacon.org - you just get the form.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -1,8 +1,7 @@
-<h2>Leadership Macon Nomination</h2>
+<h1>Leadership Macon Nomination</h1>
 
 <p>
-  Welcome to the Leadership Macon Nomination form. Please read the instructions
-  throughly and double check your responses for accuracy.
+  Please double check your responses for accuracy before submitting the form.
 </p>
 
 <form action="/submit" method="post">
