Add RECAPTCHA to form.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -176,6 +176,24 @@
         </select>
       </div>
     </div>
+
+    <div class="control-group">
+      <label class="control-label" for="nominee_notified">Verify you're human.</label>
+      <div class="controls">
+        <!-- recaptcha -->
+        <script type="text/javascript"
+           src="http://www.google.com/recaptcha/api/challenge?k=${recaptcha.public_key}">
+        </script>
+        <noscript>
+           <iframe src="http://www.google.com/recaptcha/api/noscript?k=${recaptcha.public_key}"
+               height="300" width="500" frameborder="0"></iframe><br>
+           <textarea name="recaptcha_challenge_field" rows="3" cols="40">
+           </textarea>
+           <input type="hidden" name="recaptcha_response_field"
+               value="manual_challenge">
+        </noscript>
+      </div>
+    </div>
   </fieldset>
 
   <button class="btn btn-primary">Submit Nomination</button>
