Fix an error with nomination reason validations.

--- a/views/nomination.html
+++ b/views/nomination.html
@@ -129,8 +129,8 @@
 
   <fieldset>
     <legend>Nominee Details</legend>
-    <div class="control-group {{if validations['nominator_reason']}}error{{/if}}">
-      <label class="control-label" for="nominator_reason">I am nominating this person because.</label>
+    <div class="control-group {{if validations['nomination_reason']}}error{{/if}}">
+      <label class="control-label" for="nomination_reason">I am nominating this person because.</label>
       <div class="controls">
         <input type="text" class="input-xxlarge" id="nomination_reason" name="nomination[nomination_reason]" value="${nomination.nomination_reason}">
       </div>
