--- a/views/nomination.html
+++ b/views/nomination.html
@@ -182,10 +182,10 @@
       <div class="controls">
         <!-- recaptcha -->
         <script type="text/javascript"
-           src="http://www.google.com/recaptcha/api/challenge?k=${recaptcha.public_key}">
+           src="https://www.google.com/recaptcha/api/challenge?k=${recaptcha.public_key}">
         </script>
         <noscript>
-           <iframe src="http://www.google.com/recaptcha/api/noscript?k=${recaptcha.public_key}"
+           <iframe src="https://www.google.com/recaptcha/api/noscript?k=${recaptcha.public_key}"
                height="300" width="500" frameborder="0"></iframe><br>
            <textarea name="recaptcha_challenge_field" rows="3" cols="40">
            </textarea>
