--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype 5
 html
   head
-    title Leadership Macon Online Nominations
+    title #{title}
+
+    link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div.container
