Add thank you page for after submission.

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ block content
     If you have any questions we encourage you to check out the
     [Leadership Macon homepage](http://leadershipmacon.org) for more information.
 
-  form(action="/submit", method="post")
+  form(action="/", method="post")
     fieldset
       legend Nominee Contact Information
 
