--- a/views/emails/confirmation.jade
+++ b/views/emails/confirmation.jade
@@ -1,9 +1,9 @@
-doctype 5
+doctype html
 html
   body
     p #{nominatorName},
 
-    p Thank you for nominating #{nomineeName} for the Leadership Macon Class of 2014.
+    p Thank you for nominating #{nomineeName} for the Leadership Macon Class of 2015.
 
     p
       | We'll be reaching out to the nominees towards the end of the year with instructions
