--- a/views/index.pug
+++ b/views/index.pug
@@ -43,9 +43,10 @@ block content
     | fields have a red asterisk by their label, and turn red when they're highlighted
     | without having a value in them.
 
-  :marked
-    If you have any questions we encourage you to check out the
-    [Leadership Macon homepage](http://leadershipmacon.org) for more information.
+  p
+    | If you have any questions we encourage you to check out the
+    | <a href="http://leadershipmacon.org">Leadership Macon homepage</a> for more
+    | information.
 
   form(action="/", method="post")
     fieldset
